--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon_logoai/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon_logoai/favicon-16x16.png" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon_logoai/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon_logoai/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/favicon_logoai/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <title>Easy_Hybrid</title>
+</head>
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
